git commit -m "Перенос папок"

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <h3>Designer</h3>
                         <p>You are considering applying for a designer position, 
                             which could be your future career path within the company.</p>
-                            <a href="/DesignerForms/DesignerForms.html">Apply</a>
+                            <a href="../CodeShiftConnect/DesignerForms/DesignerForms.html">Apply</a>
                     </div>
                 </div>
             </div>
