git commit -m "Перенос папок"

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <h3>Programmer</h3>
                         <p>You are considering the idea of applying for a programmer position, 
                             which could be your future professional path within the company.</p>
-                            <a href="/ProgrammerForms/ProgrammerForms.html">Apply</a>
+                            <a href="../CodeShiftConnect/ProgrammerForms/ProgrammerForms.html">Apply</a>
                     </div>
                 </div>
             </div>
