git commit -m "forms"

--- a/DesignerForms/DesignerForms.html
+++ b/DesignerForms/DesignerForms.html
@@ -54,7 +54,7 @@
             <div class="content">
                 <div class="colbuttons-container">
                     <input type="submit" value="Send">
-                    <a href="/index.html" class="back-link">Back</a>
+                    <a href="../index.html" class="back-link">Back</a>
                 </div>
             </div>
         </div>
