--- a/ProgrammerForms/ProgrammerForms.html
+++ b/ProgrammerForms/ProgrammerForms.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col">
                     <div class="inputBox">
-                        <input type="text" name="mobile" required="required">
+                        <input type="text" name="mobile" required="required" >
                         <span class="text">Mobile</span>
                         <span class="line"></span>
                     </div>
@@ -46,7 +46,7 @@
             <div class="content">
                 <div class="col">
                     <div class="inputBox textarea" >
-                        <textarea required="required"></textarea>
+                        <textarea required="required" name="massage"></textarea>
                         <span class="text">About Me</span>
                         <span class="line"></span>
                     </div>
