--- a/DesignerForms/DesignerForms.html
+++ b/DesignerForms/DesignerForms.html
@@ -46,7 +46,7 @@
             <div class="content">
                 <div class="col">
                     <div class="inputBox textarea" >
-                        <textarea required="required"></textarea>
+                        <textarea required="required" name="massage"></textarea>
                         <span class="text">About Me</span>
                         <span class="line"></span>
                     </div>
