--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
                     </div>
                 </div>
             </div>
+            <div class="box" style="--clr:#ff6bb6;">
+                <div class="content">
+                    <div class="icon"><ion-icon name="code-slash"></ion-icon></div>
+                    <div class="text">
+                        <h3>Programmer</h3>
+                        <p>You are considering the idea of applying for a programmer position, 
+                            which could be your future professional path within the company.</p>
+                            <a href="../CodeShiftConnect/ProgrammerForms/ProgrammerForms.html">Apply</a>
+                    </div>
+                </div>
+            </div>
         </div>
        
      <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
