fixed index, designer, css

--- a/DesignerForms/DesignerForms.html
+++ b/DesignerForms/DesignerForms.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="resume">
-            <h2>Resume for a designer</h2>
+            <h2>Resume for a GameDesigner</h2>
             <form action="https://formspree.io/f/xdorgjdp"method="POST">
             <div class="content">
                 <div class="col">
