--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="content">
                     <div class="icon"><ion-icon name="brush"></ion-icon></div>    
                     <div class="text">
-                        <h3>Designer</h3>
+                        <h3>GameDesigner</h3>
                         <p>You are considering applying for a designer position, 
                             which could be your future career path within the company.</p>
                             <a href="../CodeShiftConnect/DesignerForms/DesignerForms.html">Apply</a>
@@ -32,19 +32,9 @@
                     </div>
                 </div>
             </div>
-            <div class="box" style="--clr:#ff6bb6;">
-                <div class="content">
-                    <div class="icon"><ion-icon name="code-slash"></ion-icon></div>
-                    <div class="text">
-                        <h3>Programmer</h3>
-                        <p>You are considering the idea of applying for a programmer position, 
-                            which could be your future professional path within the company.</p>
-                            <a href="../CodeShiftConnect/ProgrammerForms/ProgrammerForms.html">Apply</a>
-                    </div>
-                </div>
-            </div>
+            <!-- Сюда вписать новую карту если будет нужно -->
+            
         </div>
-       
      <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
      <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     </body>
