--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="within=device-width, initial-scale=1.0">
         <title>CodeShiftConnect</title>
-        <link rel="shortcut icon" type="x-icon" href="#">
+        <link rel="shortcut icon" type="x-icon" href="/img/CodeFish.jpg">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <div class="txt"><h2>CodeShift<span>Connect</span></h2></div>
@@ -17,18 +17,18 @@
                         <h3>GameDesigner</h3>
                         <p>You are considering applying for a designer position, 
                             which could be your future career path within the company.</p>
-                            <a href="../CodeShiftConnect/DesignerForms/DesignerForms.html">Apply</a>
+                            <a href="/DesignerForms/DesignerForms.html">Apply</a>
                     </div>
                 </div>
             </div>
-            <div class="box" style="--clr:#89ec5d;">
+            <div class="box" style="--clr:#ed5d9a;">
                 <div class="content">
                     <div class="icon"><ion-icon name="code-slash"></ion-icon></div>
                     <div class="text">
                         <h3>Programmer</h3>
                         <p>You are considering the idea of applying for a programmer position, 
                             which could be your future professional path within the company.</p>
-                            <a href="../CodeShiftConnect/ProgrammerForms/ProgrammerForms.html">Apply</a>
+                            <a href="/ProgrammerForms/ProgrammerForms.html">Apply</a>
                     </div>
                 </div>
             </div>
