--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <h3>GameDesigner</h3>
                         <p>You are considering applying for a designer position, 
                             which could be your future career path within the company.</p>
-                            <a href="/DesignerForms/DesignerForms.html">Apply</a>
+                            <a href="../CodeFishConnect/DesignerForms/DesignerForms.html">Apply</a>
                     </div>
                 </div>
             </div>
@@ -28,7 +28,7 @@
                         <h3>Programmer</h3>
                         <p>You are considering the idea of applying for a programmer position, 
                             which could be your future professional path within the company.</p>
-                            <a href="/ProgrammerForms/ProgrammerForms.html">Apply</a>
+                            <a href="../CodeFishConnect/ProgrammerForms/ProgrammerForms.html">Apply</a>
                     </div>
                 </div>
             </div>
