--- a/DesignerForms/DesignerForms.html
+++ b/DesignerForms/DesignerForms.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="within=device-width, initial-scale=1.0">
         <title>CodeShiftConnect</title>
-        <link rel="shortcut icon" type="x-icon" href="../CodeFishConnect/img/CodeFish.jpg">
+        <link rel="shortcut icon" type="x-icon" href="/img/CodeFish.jpg">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
