--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="within=device-width, initial-scale=1.0">
-        <title>CodeShiftConnect</title>
-        <link rel="shortcut icon" type="x-icon" href="../CodeFishConnect/img/CodeFish.jpg">
+        <title>CodeFhiftConnect</title>
+        <link rel="shortcut icon" type="x-icon" href="../CodeFishConnect/img/CodeFish.png">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <div class="txt"><h2>CodeShift<span>Connect</span></h2></div>
+    <div class="txt"><h2>CodeFhift<span>Connect</span></h2></div>
     <body>
         <div class="card">
             <div class="box" style="--clr:#5b98ed;">
