--- a/ProgrammerForms/ProgrammerForms.html
+++ b/ProgrammerForms/ProgrammerForms.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="within=device-width, initial-scale=1.0">
-        <title>CodeShiftConnect</title>
-        <link rel="shortcut icon" type="x-icon" href="/img/CodeFish.jpg">
+        <title>CodeFhiftConnect</title>
+        <link rel="shortcut icon" type="x-icon" href="/img/CodeFish.png">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
