--- a/ProgrammerForms/ProgrammerForms.html
+++ b/ProgrammerForms/ProgrammerForms.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="within=device-width, initial-scale=1.0">
         <title>CodeFhiftConnect</title>
-        <link rel="shortcut icon" type="x-icon" href="/img/CodeFish.png">
+        <link rel="shortcut icon" type="x-icon" href="../CodeFishConnect/img/CodeFish.png">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
