--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
                     </div>
                 </div>
             </div>
+            <div class="box" style="--clr:#70ed5d;">
+                <div class="content">
+                    <div class="icon"><ion-icon name="musical-notes-outline"></ion-icon></div>
+                    <div class="text">
+                        <h3>Musician</h3>
+                        <p>You are considering the idea of applying for a Musician position, 
+                            which could be your future professional path within the company.</p>
+                            <a href="../CodeFishConnect/MusicianForms/MusicianForms.html">Apply</a>
+                    </div>
+                </div>
+            </div>
             <!-- Сюда вписать новую карту если будет нужно -->
             
         </div>
