--- a/DesignerForms/DesignerForms.html
+++ b/DesignerForms/DesignerForms.html
@@ -10,7 +10,7 @@
     <body>
         <div class="resume">
             <h2>Resume for a GameDesigner</h2>
-            <form action="https://formspree.io/f/xdorgjdp"method="POST">
+            <form action="https://formspree.io/f/mqazjzgb" method="POST">
             <div class="content">
                 <div class="col">
                     <div class="inputBox">
